feature:get all viviendas
